@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (May 25, 2024)"
-.Dd May 25, 2024
+.\" Modified by Ken DEGUCHI (May 26, 2024)"
+.Dd May 26, 2024
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
@@ -35,6 +35,7 @@
 .Oo
 .Op Ar pkgname\fR[=\fIpackage\fR]
 .Op Ar package
+.Op Ar glob
 .Op Ar pkgorigin
 .Ar ...
 .Oc
@@ -52,6 +53,10 @@ Show help and exit.
 .It Fl a , Fl \-all
 Do with all the installed packages.
 .Pp
+.It Fl \-automatic
+Set automatic flag for the package.
+This affects the operation of pkg-autoremove(8).
+.Pp
 .It Fl b , Fl \-backup-package
 Keep backup packages of the old versions.
 By default, the created backup package will be deleted after installation.
@@ -60,10 +65,6 @@ See also,
 .Pp
 .It Fl B , Fl \-no-backup
 Do not backup old packages.
-.Pp
-.It Fl \-automatic
-Set automatic flag for the package.
-This affects the operation of pkg-autoremove(8).
 .Pp
 .It Fl \-batch
 Run an upgrading process in a batch mode (with BATCH=yes).
@@ -272,10 +273,10 @@ after each installation.
 See also,
 .Fl \-cleanup
 .Pp
-.It Fl x Ar GLOB
+.It Fl x Ar glob
 Do not replace packages matching the specified glob pattern.
 .Pp
-.It Fl X Ar GLOB
+.It Fl X Ar glob
 Remove the libraries in
 .Va PKGCOMPATDIR ,
 when the specified packages have the libraries with the same name as the one in
@@ -286,10 +287,10 @@ This may be useful when there are errors due to a mixture of old and new librari
 .Sh EXAMPLES
 .Bl -bullet
 .It
-pkgname examples:
+pkgname and glob examples:
 .Pp
 .Dl name-version, name and shell glob.
-.Dl glib-2.36.3_2, glib and Dq glib*
+.Dl glib-2.36.3_2, glib and 'glib*' or glib\e*
 .Pp
 .It
 pkgorigin examples:
@@ -367,7 +368,7 @@ Do
 .Dq Li make configure
 only:
 .Pp
-.Ar pkg_replace -t configure pkgname
+.Dl pkg_replace -t configure pkgname
 .El
 .Sh COMPATIBILITY
 The
