@@ -1,6 +1,8 @@
+20240526
+*Cleanup options. Add "--no-verbose", "--no-config", and "--no-force-config", etc.
+
 20240525
 *Improved the summary message.
-*Cleanup options. Add "--no-verbose", "--no-config", and "--no-force-config", etc.
 
 20240518
 *Add "-X" option.
